test/classes/ferguson/override-intents.good
override-intents.chpl:82: error: Child.in_const conflicting intent for argument 'arg'
override-intents.chpl:8: error: this function uses 'in' intent
override-intents.chpl:82: error: this function uses 'const' intent
override-intents.chpl:83: error: Child.in_const_in conflicting intent for argument 'arg'
override-intents.chpl:9: error: this function uses 'in' intent
override-intents.chpl:83: error: this function uses 'const in' intent
override-intents.chpl:86: error: Child.in_blank conflicting intent for argument 'arg'
override-intents.chpl:12: error: this function uses 'in' intent
override-intents.chpl:86: error: this function uses default intent
override-intents.chpl:90: error: Child.out_inout conflicting intent for argument 'arg'
override-intents.chpl:16: error: this function uses 'out' intent
override-intents.chpl:90: error: this function uses 'inout' intent
override-intents.chpl:93: error: Child.out_ref conflicting intent for argument 'arg'
override-intents.chpl:19: error: this function uses 'out' intent
override-intents.chpl:93: error: this function uses 'ref' intent
override-intents.chpl:94: error: Child.out_const_ref conflicting intent for argument 'arg'
override-intents.chpl:20: error: this function uses 'out' intent
override-intents.chpl:94: error: this function uses 'const ref' intent
override-intents.chpl:98: error: Child.inout_out conflicting intent for argument 'arg'
override-intents.chpl:24: error: this function uses 'inout' intent
override-intents.chpl:98: error: this function uses 'out' intent
override-intents.chpl:102: error: Child.inout_ref conflicting intent for argument 'arg'
override-intents.chpl:28: error: this function uses 'inout' intent
override-intents.chpl:102: error: this function uses 'ref' intent
override-intents.chpl:103: error: Child.inout_const_ref conflicting intent for argument 'arg'
override-intents.chpl:29: error: this function uses 'inout' intent
override-intents.chpl:103: error: this function uses 'const ref' intent
override-intents.chpl:106: error: Child.const_in conflicting intent for argument 'arg'
override-intents.chpl:32: error: this function uses 'const' intent
override-intents.chpl:106: error: this function uses 'in' intent
override-intents.chpl:110: error: Child.const_const_in conflicting intent for argument 'arg'
override-intents.chpl:36: error: this function uses 'const' intent
override-intents.chpl:110: error: this function uses 'const in' intent
override-intents.chpl:113: error: Child.const_blank conflicting intent for argument 'arg'
override-intents.chpl:39: error: this function uses 'const' intent
override-intents.chpl:113: error: this function uses default intent
override-intents.chpl:115: error: Child.const_in_in conflicting intent for argument 'arg'
override-intents.chpl:41: error: this function uses 'const in' intent
override-intents.chpl:115: error: this function uses 'in' intent
override-intents.chpl:118: error: Child.const_in_const conflicting intent for argument 'arg'
override-intents.chpl:44: error: this function uses 'const in' intent
override-intents.chpl:118: error: this function uses 'const' intent
override-intents.chpl:122: error: Child.const_in_blank conflicting intent for argument 'arg'
override-intents.chpl:48: error: this function uses 'const in' intent
override-intents.chpl:122: error: this function uses default intent
override-intents.chpl:125: error: Child.ref_out conflicting intent for argument 'arg'
override-intents.chpl:51: error: this function uses 'ref' intent
override-intents.chpl:125: error: this function uses 'out' intent
override-intents.chpl:126: error: Child.ref_inout conflicting intent for argument 'arg'
override-intents.chpl:52: error: this function uses 'ref' intent
override-intents.chpl:126: error: this function uses 'inout' intent
override-intents.chpl:130: error: Child.ref_const_ref conflicting intent for argument 'arg'
override-intents.chpl:56: error: this function uses 'ref' intent
override-intents.chpl:130: error: this function uses 'const ref' intent
override-intents.chpl:134: error: Child.const_ref_out conflicting intent for argument 'arg'
override-intents.chpl:60: error: this function uses 'const ref' intent
override-intents.chpl:134: error: this function uses 'out' intent
override-intents.chpl:135: error: Child.const_ref_inout conflicting intent for argument 'arg'
override-intents.chpl:61: error: this function uses 'const ref' intent
override-intents.chpl:135: error: this function uses 'inout' intent
override-intents.chpl:138: error: Child.const_ref_ref conflicting intent for argument 'arg'
override-intents.chpl:64: error: this function uses 'const ref' intent
override-intents.chpl:138: error: this function uses 'ref' intent
override-intents.chpl:142: error: Child.blank_in conflicting intent for argument 'arg'
override-intents.chpl:68: error: this function uses default intent
override-intents.chpl:142: error: this function uses 'in' intent
override-intents.chpl:145: error: Child.blank_const conflicting intent for argument 'arg'
override-intents.chpl:71: error: this function uses default intent
override-intents.chpl:145: error: this function uses 'const' intent
override-intents.chpl:146: error: Child.blank_const_in conflicting intent for argument 'arg'
override-intents.chpl:72: error: this function uses default intent
override-intents.chpl:146: error: this function uses 'const in' intent
override-intents.chpl:80: error: Child.in_out override keyword present but no superclass method matches signature to override
override-intents.chpl:81: error: Child.in_inout override keyword present but no superclass method matches signature to override
override-intents.chpl:84: error: Child.in_ref override keyword present but no superclass method matches signature to override
override-intents.chpl:85: error: Child.in_const_ref override keyword present but no superclass method matches signature to override
override-intents.chpl:88: error: Child.out_in override keyword present but no superclass method matches signature to override
override-intents.chpl:91: error: Child.out_const override keyword present but no superclass method matches signature to override
override-intents.chpl:92: error: Child.out_const_in override keyword present but no superclass method matches signature to override
override-intents.chpl:95: error: Child.out_blank override keyword present but no superclass method matches signature to override
override-intents.chpl:97: error: Child.inout_in override keyword present but no superclass method matches signature to override
override-intents.chpl:100: error: Child.inout_const override keyword present but no superclass method matches signature to override
override-intents.chpl:101: error: Child.inout_const_in override keyword present but no superclass method matches signature to override
override-intents.chpl:104: error: Child.inout_blank override keyword present but no superclass method matches signature to override
override-intents.chpl:107: error: Child.const_out override keyword present but no superclass method matches signature to override
override-intents.chpl:108: error: Child.const_inout override keyword present but no superclass method matches signature to override
override-intents.chpl:111: error: Child.const_ref override keyword present but no superclass method matches signature to override
override-intents.chpl:112: error: Child.const_const_ref override keyword present but no superclass method matches signature to override
override-intents.chpl:116: error: Child.const_in_out override keyword present but no superclass method matches signature to override
override-intents.chpl:117: error: Child.const_in_inout override keyword present but no superclass method matches signature to override
override-intents.chpl:120: error: Child.const_in_ref override keyword present but no superclass method matches signature to override
override-intents.chpl:121: error: Child.const_in_const_ref override keyword present but no superclass method matches signature to override
override-intents.chpl:124: error: Child.ref_in override keyword present but no superclass method matches signature to override
override-intents.chpl:127: error: Child.ref_const override keyword present but no superclass method matches signature to override
override-intents.chpl:128: error: Child.ref_const_in override keyword present but no superclass method matches signature to override
override-intents.chpl:131: error: Child.ref_blank override keyword present but no superclass method matches signature to override
override-intents.chpl:133: error: Child.const_ref_in override keyword present but no superclass method matches signature to override
override-intents.chpl:136: error: Child.const_ref_const override keyword present but no superclass method matches signature to override
override-intents.chpl:137: error: Child.const_ref_const_in override keyword present but no superclass method matches signature to override
override-intents.chpl:140: error: Child.const_ref_blank override keyword present but no superclass method matches signature to override
override-intents.chpl:143: error: Child.blank_out override keyword present but no superclass method matches signature to override
override-intents.chpl:144: error: Child.blank_inout override keyword present but no superclass method matches signature to override
override-intents.chpl:147: error: Child.blank_ref override keyword present but no superclass method matches signature to override
override-intents.chpl:148: error: Child.blank_const_ref override keyword present but no superclass method matches signature to override
